--- a/Web Pages/style.css
+++ b/Web Pages/style.css
@@ -15,7 +15,7 @@ COLOR{
 
 
 /* GLOBAL STYLES*/
-p, h1, h2, h3, li, a {
+p, h1, h2, h3, li, a, .overlay {
   font-family: 'Karla', sans-serif;
   color: #15202e;
 }
@@ -74,6 +74,79 @@ header{
 
 main{
   height: 1000px;
+}
+
+/* photo grid */
+
+.flex-grid {
+  display: flex;
+  flex-direction: row;
+}
+.col {
+  flex: 1;
+}
+
+@media (max-width: 400px) {
+  .flex-grid {
+    display: block;
+  }
+}
+
+* {box-sizing: border-box}
+
+
+.container {
+  position: relative;
+  width: 100%;
+  max-width: 650px;
+  margin: 0px;
+}
+
+
+.img {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+
+.container img, a {margin: 5px;
+  display: block;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  background: #FFFFFF;
+  color: #f58537;
+  width: 100%;
+  height: 100%;
+  transition: .9s ease;
+  opacity:0;
+  color: #f58537;
+  font-size: 21px;
+  padding: 25px 25px 25px 25px;
+  text-align: left;
+  font-size: 1.5em;
+  font-weight: 900;
+  margin: 0px;
+}
+
+.indeximg {display: inline;}
+
+.container:hover .overlay {
+  opacity: .7;
+}
+
+.index {padding: 0px 0px 100px 0px;
+}
+
+@media screen and (min-width: 500px){
+  .flex-grid2 {display: flex;
+    flex-direction: row;
+  }
+  .col2 {
+    flex: 1;
+  }
 }
 
 /* Bios */
