--- a/Web Pages/style.css
+++ b/Web Pages/style.css
@@ -32,6 +32,9 @@ body{
   margin: 0 auto;
 }
 
+li {list-style-type: none;
+}
+
 
 
 /*NAV*/
@@ -220,14 +223,36 @@ main{
 
 /* Bios */
 
-.bio-img {
-  display: block;
+
+.sidebyside{
+  position: relative;
   width: 100%;
+  height: 100%;
+  background-color: white;
+  padding: 0px;
 }
 
-.column {width: 50%;
+.bio-grid-container{
+  width: 100%;
+  padding: 15px;
 }
 
-.row {
-  display: flex;
-  flex-direction: row;
+.bio-grid{
+  display: grid;
+  max-width: 400px;
+  margin: 0 auto;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto auto auto auto auto auto auto auto auto auto auto;
+  grid-gap: 15px;
+}
+
+@media screen and (min-width: 500px){
+  .bio-grid{
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+    max-width: 700px;
+  }
+  .bio-grid-container{
+    padding: 20px;
+  }
+}
