--- a/Web Pages/style.css
+++ b/Web Pages/style.css
@@ -39,22 +39,33 @@ li {list-style-type: none;
 
 /*NAV*/
 .navigation{
-  width: 12%;
+  width: 200px;
   height: 100%;
   /*background: grey;*/
   padding: 60px 10px 0px 30px;
 }
 
+#export-logo{
+
+}
+
 nav ul{
+  margin-top: 2em;
   list-style-type: none;
   padding-left: 35px;
   font-size: 1.2em;
-  line-height: 3em;
+  line-height: 1.2em;
 }
 
 a:visited {
   color: #15202e;
 }
+
+li{
+  margin-bottom: 1.5em;
+}
+
+
 
 
 /*FOOTER*/
