--- a/style.css
+++ b/style.css
@@ -43,10 +43,7 @@ li {list-style-type: none;
   height: 100%;
   /*background: grey;*/
   padding: 60px 10px 0px 30px;
-}
-
-#export-logo{
-
+  position: absolute;
 }
 
 nav ul{
@@ -66,6 +63,15 @@ li{
 }
 
 
+.bgAnim{
+  height: 100vh;
+  pointer-events: none;
+}
+
+.bgAnim img{
+  max-width: 100%;
+  max-height: 100%;
+}
 
 
 /*FOOTER*/
