--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ html{
 }
 
 iframe {
-    width: 1500px;
+    width: 100%;
     height: 700px;
     margin: 0 auto;
     display: block;
@@ -78,33 +78,43 @@ iframe {
 
 .navigation{
   width: 200px;
-  /*background: grey;*/
   padding: 60px 10px 0px 30px;
-  /*position: absolute;*/
+  position: absolute;
   z-index: 5;
 }
 
-nav ul{
-  margin-top: 2.5em;
-  list-style: none;
-  /*list-style-image: url("images/nav/location bullet.svg");*/
-  padding-left: 15px;
-  font-size: 1.2em;
+.navigation-top{
+  padding: 30px 30px 20px 30px;
+  height: auto;
+  z-index: 5;
 }
 
-nav ul li{
-  position: relative;
-  padding-left: 20px;
-  margin-bottom: 1.2em;
+nav ul.menu{
+  margin: 0 auto;
+  max-width: 1000px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-left: 0px;
+}
+
+nav ul img{
+  width: 150px !important;
 }
 
 a:visited, h1, h2 {
   color: #114A7F;
 }
 
-.location-bullets li a{
+
+
+nav ul li a{
   font-weight: 700;
+  font-size: 1.2em;
   color: #114A7F;
+}
+
+nav ul li#not-current-page a{
   opacity: .5;
   -webkit-transition: .3s ease-in-out;
   -moz-transition: .3s ease-in-out;
@@ -112,28 +122,13 @@ a:visited, h1, h2 {
   transition: .3s ease-in-out;
 }
 
-.location-bullets li a:hover{
+nav ul li#not-current-page a:hover{
   opacity: 1;
 }
 
-.location-bullets li#current-page a{
+nav ul li#current-page a{
   opacity: 1;
 }
-
-.location-bullets li#current-page::before{
-  content: '';
-  width: 14.7px;
-  height: 12.144px;
-  position: absolute;
-  background-image: url('images/nav/location bullet.svg');
-  background-size: cover;
-  background-position: center;
-  top: 45%;
-  left: 5px;
-  transform: translateY(-50%);
-}
-
-
 
 /*FOOTER*/
 footer{
@@ -160,8 +155,11 @@ main{
 }
 
 .bgAnim{
-  height: 100vh;
+  width: 100%;
+  height: 67vh;
   pointer-events: none;
+  z-index: -10;
+  top: 0px;
 }
 
 .bgAnim img{
