--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ iframe {
     display: block;
 }
 
+
 .map {padding: 100px 0px 0px 0px;
 }
 
@@ -102,16 +103,26 @@ nav ul img{
   width: 150px !important;
 }
 
+
+
 a:visited, h1, h2 {
   color: #114A7F;
 }
 
+nav ul li a{
+  font-weight: 700;
+  font-size: .9em;
+  color: #114A7F;
+  padding: 3px;
+}
 
+@media screen and (min-width: 600px){
 
 nav ul li a{
   font-weight: 700;
   font-size: 1.2em;
   color: #114A7F;
+}
 }
 
 nav ul li#not-current-page a{
