--- a/style.css
+++ b/style.css
@@ -111,9 +111,9 @@ a:visited, h1, h2 {
 
 nav ul li a{
   font-weight: 700;
-  font-size: .9em;
+  font-size: 1em;
   color: #114A7F;
-  padding: 3px;
+  padding: 2px;
 }
 
 @media screen and (min-width: 600px){
