--- a/style.css
+++ b/style.css
@@ -85,7 +85,8 @@ iframe {
 }
 
 .navigation-top{
-  padding: 30px 30px 20px 30px;
+  padding: 20px 20px 10px 20px;
+  /*padding: 20px 20px 10px 20px;*/
   height: auto;
   z-index: 5;
 }
