--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ a:visited, h1, h2 {
 
 nav ul li a{
   font-weight: 700;
-  font-size: 1.1em;
+  font-size: 1em;
   color: #114A7F;
   padding: 5px;
 }
@@ -178,7 +178,7 @@ main{
 
 .bgAnim{
   width: 100%;
-  height: 67vh;
+  height: 75vh;
   pointer-events: none;
   z-index: -10;
   top: 0px;
@@ -344,25 +344,39 @@ main{
   padding: 0px;
 }
 
+.sidebyside img{
+  margin-bottom: 20px;
+}
+
 .bio-grid-container{
   width: 100%;
   padding: 15px;
+  margin-top: 3vh;
+  margin-bottom: 50px;
 }
 
 .bio-grid{
-  display: grid;
   max-width: 400px;
   margin: 0 auto;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto auto auto auto auto auto auto auto auto auto auto auto;
-  grid-gap: 15px;
+}
+
+h1.no-top-padding{
+  font-size: 1.2em;
+  margin-top: 0px;
+  padding: 0px 0px 0px 25px;
+  text-align: left;
+}
+
+h1.bold-h1{
+  font-weight: 700;
+  font-size: 2em;
+  margin-bottom: 1em;
 }
 
 @media screen and (min-width: 500px){
   .bio-grid{
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 10px;
-    max-width: 700px;
+    display: flex;
+    max-width: 900px;
   }
   .bio-grid-container{
     padding: 20px;
