--- a/style.css
+++ b/style.css
@@ -287,11 +287,21 @@ main{
 .grid-item:hover .overlay{
   opacity: .7
 }
+.grid-item:hover img{
+  -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(0%);
+}
 
 .grid-item img{
   margin: 0px;
   width: 100%;
   height: 100%;
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+  -webkit-transition: .3s ease-in-out;
+  -moz-transition: .3s ease-in-out;
+  -o-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
 }
 .grid-item a{
   margin: 0px;
