--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ Museo Sans{
 }
 COLORS
 light grey: #E7E7E9;
-medium blue: #114A7F;
+grey: #808285;
+almost black: #414042;
 lime green: #ABD037
-cyan: #54C0D0;
 */
 
 
@@ -107,7 +107,7 @@ nav ul img{
 
 
 a:visited, h1, h2 {
-  color: #114A7F;
+  color: #414042;
 }
 
 nav ul li a{
@@ -140,6 +140,7 @@ nav ul li#not-current-page a:hover{
 
 nav ul li#current-page a{
   opacity: 1;
+  border-bottom: solid 2px #ABD037;
 }
 
 @media screen and (min-width: 500px) {
@@ -150,9 +151,15 @@ nav ul li#current-page a{
 @media screen and (max-width: 499px) {
 .large-screen-menu {display: none;
 }
+.navigation-top{
+  padding: 0px 0px 0px 0px;
+  height: auto;
+}
 }
 
-.small-screen-menu img {width: 100px;}
+.small-screen-menu img {
+  max-width: 45px;
+}
 
 /*FOOTER*/
 footer{
@@ -238,7 +245,7 @@ main{
   width: 100%;
   height: 100%;
   opacity: 0;
-  color: #54C0D0;
+  color: #414042;
   font-size: 21px;
   padding: 25px 25px 25px 25px;
   text-align: left;
