additional color changes, testing duotone photos

--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ main{
 .overlay {
   position: absolute;
   bottom: 0;
-  background: #FFFFFF;
+  /*background: #FFFFFF;*/
   width: 100%;
   height: 100%;
   opacity: 0;
