--- a/style.css
+++ b/style.css
@@ -77,13 +77,6 @@ iframe {
   width: 52px;
 }
 
-.navigation{
-  width: 200px;
-  padding: 60px 10px 0px 30px;
-  position: absolute;
-  z-index: 5;
-}
-
 .navigation-top{
   padding: 20px 0px 20px 0px;
   /*padding: 20px 20px 10px 20px;*/
@@ -146,10 +139,16 @@ nav ul li#current-page a{
 @media screen and (min-width: 500px) {
 .small-screen-menu {display: none;
 }
+.command-bg{
+  margin-top: calc(100vh - 120px);
+}
 }
 
 @media screen and (max-width: 499px) {
 .large-screen-menu {display: none;
+}
+.command-bg{
+  margin-top: calc(100vh - 70px);
 }
 .navigation-top{
   padding: 0px 0px 0px 0px;
@@ -186,10 +185,12 @@ main{
 }
 
 .bgAnim{
+  background: red;
   width: 100%;
-  height: 75vh;
+  height: 100vh;
   pointer-events: none;
   z-index: -10;
+  position: absolute;
   top: 0px;
 }
 
@@ -198,13 +199,15 @@ main{
   max-height: 100%;
 }
 
-/*
+
 .command-bg{
+  /*
   background-image: url("images/single command tex.svg");
   background-size: 4%;
   background-repeat: repeat;
+  margin-top: 100vh;
+  */
 }
-*/
 
 
 /* photo grid */
