--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ a:visited, h1, h2 {
 nav ul li a{
   font-weight: 700;
   font-size: 1em;
-  color: #114A7F;
+  color: #414042;
   padding: 5px;
 }
 
