--- a/style.css
+++ b/style.css
@@ -51,8 +51,6 @@ img, svg {
 
 body{
   margin: 0 auto;
-  /*cursor: wait;*/
-  cursor: url(images/cursor-default.svg), auto;
 }
 
 li {list-style-type: none;
@@ -213,7 +211,10 @@ main{
 
 /* photo grid */
 
-* {box-sizing: border-box}
+* {
+  box-sizing: border-box;
+  cursor: url(images/cursordefault.svg), auto;
+}
 
 
 .container {
