--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Museo Sans{
   font-style: italic ONLY FOR 300 AND 500;
 }
 COLORS
-light grey: #E7E7E9;
+light grey: #ABD037;
 grey: #808285;
 almost black: #414042;
 lime green: #ABD037
@@ -408,4 +408,9 @@ h1.bold-h1{
   margin: 0 auto;
   max-width: 900px;
   padding-bottom: 100px;
+}
+
+/*location*/
+
+.map-container {padding: 50px 0px 50px 0px;
 }
