--- a/style.css
+++ b/style.css
@@ -23,13 +23,34 @@ p, h1, h2, h3, li, lh, a, .overlay {
   font-style: normal;
 }
 
-h1, p, h2 {text-align: center;
+h1, h2 {text-align: center;
 }
+
+p {text-align: left;
+  padding: 2% 0 2% 0;
+  line-height: 1.4em;
+}
+
+@media screen and (min-width: 200px) {
+  p {padding: 7% 0 7% 0;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  p {padding: 10% 0 10% 0;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  p {padding: 15% 0 15% 0;
+  }
+}
+
 
 lh {font-weight: bold;
 }
 
-h1, h2 {padding: 100px 0px 0px 0px;
+h1, h2 {padding: 50px 0px 0px 0px;
 }
 
 p {padding: 0px 20px 0px 20px;
@@ -60,16 +81,8 @@ html{
   scroll-behavior: smooth;
 }
 
-iframe {
-    width: 100%;
-    height: 700px;
-    margin: 0 auto;
-    display: block;
-}
 
 
-.map {padding: 100px 0px 0px 0px;
-}
 
 /*NAV*/
 .sticky-command{
@@ -412,5 +425,5 @@ h1.bold-h1{
 
 /*location*/
 
-.map-container {padding: 50px 0px 50px 0px;
+.map-container {padding: 50px 0px 0px 0px;
 }
