creating footer with logo and social media icons for all pages

--- a/style.css
+++ b/style.css
@@ -175,9 +175,44 @@ nav ul li#current-page a{
 
 /*FOOTER*/
 footer{
-  height: 200px;
+  height: auto;
+  padding: 50px;
   background: #e7e7e9;
   bottom: 0px;
+}
+
+footer ul{
+	text-decoration: none;
+	font-size: 28px;
+  margin: 0 auto 0 auto;
+	display: flex;
+  justify-content: space-between;
+  width: 120px;
+  padding-left: 0px;
+}
+
+footer a{
+	color: #414042;
+	text-decoration: none;
+  -webkit-transition: .3s ease-in-out;
+  -moz-transition: .3s ease-in-out;
+  -o-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+  opacity: 1;
+}
+
+footer a:visited{
+  color: #414042;
+}
+footer a:hover{
+  opacity: .5;
+}
+
+footer img{
+  width: 200px;
+  display: block;
+  margin: 40px auto 0 auto;
+  
 }
 
 
@@ -411,18 +446,6 @@ h1.bold-h1{
     padding: 20px;
   }
 }
-
-
-
-footer ul{
-	text-decoration: none;
-	color:#E6E7E8;
-	display:flex;
-	font-size: 24px;
-	margin: 16px 0 10px 0;
-}
-
-
 
 
 
