--- a/style.css
+++ b/style.css
@@ -433,12 +433,21 @@ h1.no-top-padding{
   margin-top: 0px;
   padding: 0px 0px 0px 25px;
   text-align: left;
+  margin-bottom: 0px;
+}
+
+.sidebyside ul{
+    margin: 5px auto 25px auto;
 }
 
 h1.bold-h1{
   font-weight: 700;
   font-size: 2em;
   margin-bottom: 1em;
+}
+
+.sidebyside ul{
+  line-height: 1.5em;
 }
 
 @media screen and (min-width: 500px){
@@ -465,7 +474,7 @@ p{
 }
 
 .green-link{
-  color: #ABD037;
+  color: #414042;
   border-bottom: 2px solid #ABD037;
   -webkit-transition: .3s ease-in-out;
   -moz-transition: .3s ease-in-out;
