--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@ main{
   padding: 25px 25px 25px 25px;
   text-align: center;
   font-size: 1.5em;
-  font-weight: 900;
+  font-weight: 700;
   margin: 0px;
   -webkit-transition: .5s ease-in-out;
   -moz-transition: .5s ease-in-out;
@@ -311,6 +311,7 @@ main{
   right: 0px;
   margin: auto;
   bottom: 10%;
+  text-shadow: 2px 2px 10px #414042;
 }
 
 
@@ -341,7 +342,7 @@ main{
 }
 
 .grid-item:hover .overlay{
-  opacity: .7
+  opacity: 1
 }
 .grid-item:hover img{
   -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
