--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ img, svg {
 
 body{
   margin: 0 auto;
+
 }
 
 li {list-style-type: none;
@@ -230,6 +231,7 @@ header{
 
 main{
   height: auto;
+  min-height: 100vh;
 }
 
 .bgAnim{
