clickable header image arrow

--- a/style.css
+++ b/style.css
@@ -229,6 +229,36 @@ header{
   */
 }
 
+.hero-arrow{
+  max-width: 45px;
+  width: 8vw;
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  margin: auto;
+  bottom: 20%;
+  animation-name: arrow-point;
+  animation-duration: 2.2s;
+  animation-delay: 3s;
+  animation-timing-function: ease-in-out;
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+  opacity: .5;
+}
+
+@keyframes arrow-point {
+  0%   {bottom: 20%  -webkit-filter: grayscale(100%);
+    filter: grayscale(100%); opacity: .5}
+  25%  {bottom: 18%; -webkit-filter: grayscale(0%);
+    filter: grayscale(0%); opacity: 1}
+  50%  {bottom: 20%;  -webkit-filter: grayscale(100%);
+    filter: grayscale(100%); opacity: .5}
+  75%  {bottom: 18%; -webkit-filter: grayscale(0%);
+    filter: grayscale(0%); opacity: 1}
+  100% {bottom: 20%  -webkit-filter: grayscale(100%);
+    filter: grayscale(100%); opacity: .5}
+}
+
 main{
   height: auto;
   min-height: 100vh;
